@startuml

title __OVERWORLD's Class Diagram__\n

  package model.overworld {
    class Overworld {
        - currentLevels : HashMap<Integer, Info>
        - lastLevels : HashMap<Integer, Info>
        + Overworld()
        + getLandscapesOfCurrentLevel()
        + getDifficultyOfCurrentLevel()
        + getDungeonOfLastLevel()
        + getLandscapesOfLastLevel()
        + getDifficultyOfLastLevel()
    }
  }
  

  package model.overworld {
    class Info {
        - landscapes : Landscape[]
        + Info()
        + getLastDungeon()
        + setLastDungeon()
        + getDifficulty()
        + setDifficulty()
        + getLandscapes()
        + setLandscapes()
    }
  }
  

  Overworld +-down- Info
  Info o-- Dungeon : lastDungeon
  Info o-- Difficulty : difficulty


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
